--- a/dubbo/springcloud-alibaba/shop-order/src/main/resources/application.yml
+++ b/dubbo/springcloud-alibaba/shop-order/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: service-order
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://192.168.1.38:3306/shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: root
+    password: Haso-soft.com88
   jpa:
     properties:
       hibernate:
